RESOLVED FIXED 243676
[PlayStation] Fix build after 253180@main
https://bugs.webkit.org/show_bug.cgi?id=243676
Summary [PlayStation] Fix build after 253180@main
Basuke Suzuki
Reported 2022-08-08 10:19:06 PDT
Build error on non-Accessibility environment.
Attachments
EWS
Comment 1 2022-08-08 11:03:35 PDT
Committed 253222@main (796cd23e491a): <https://commits.webkit.org/253222@main> Reviewed commits have been landed. Closing PR #3106 and removing active labels.
Radar WebKit Bug Importer
Comment 2 2022-08-08 11:04:19 PDT
Note You need to log in before you can comment on or make changes to this bug.