[PlayStation] Fix build after 253180@main https://bugs.webkit.org/show_bug.cgi?id=243676

Unreviewed build fix.

* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::postNotification):

Canonical link: https://commits.webkit.org/253222@main